--- a/scss/base/_globales.scss
+++ b/scss/base/_globales.scss
@@ -6,7 +6,7 @@ html {
     box-sizing: inherit;
 }
 body {
-    font-family: $fuente_principal;
+    font-family: $font;
     font-size: 1.6rem;
     line-height: 1.8;
 }
