--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');
 
 // Fuentes
-$fuente_principal: 'Lato', sans-serif;
+$font: 'Lato', sans-serif;
 
 // Tamaño de Media Queries
 $telefono: 480px;
