--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
-/* Error: Undefined variable.
+/* Error: Can't find stylesheet to import.
  *   ,
- * 9 |     font-family: $font;
- *   |                  ^^^^^
+ * 6 | @import 'section/header';
+ *   |         ^^^^^^^^^^^^^^^^
  *   '
- *   scss\base\_globales.scss 9:18  @import
- *   scss\style.scss 2:9            root stylesheet */
+ *   scss\style.scss 6:9  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -14,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a   \2577 \a 9 \2502      font-family: $font;\d\a   \2502                   ^^^^^\a   \2575 \a   scss\\base\\_globales.scss 9:18  @import\a   scss\\style.scss 2:9            root stylesheet";
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 6 \2502  @import 'section/header';\d\a   \2502          ^^^^^^^^^^^^^^^^\a   \2575 \a   scss\\style.scss 6:9  root stylesheet";
 }
