--- a/scss/section.scss/_header.scss
+++ b/scss/section.scss/_header.scss
@@ -1,6 +1,15 @@
-.header{
-    background-color: red;
+
+  .header{
+     img{
+         
+     }
+    
+    
     h1{
         text-transform: uppercase;
+        color: white;
+        text-align: center;
+       
     }
-}
+
+  }
