--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,8 +1,7 @@
 
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,300;8..144,500&display=swap');
 // Fuentes
-$font: 'Lato', sans-serif;
+$font: 'Roboto Serif', serif;
 
 // Tamaño de Media Queries
 $telefono: 480px;
@@ -10,18 +9,18 @@ $tablet: 768px;
 $desktop: 1024px;
 
 // Colores
-$negro: #000000;
-$amarillo: #E08709;;
+$negro: black;
+$amarillo: #FFD369;
 $verde: #71B100;
-$blanco: #FFFFFF;
-$gris: #e1e1e1;
-$grisOscuro: #333333;
+$blanco: #EEEEEE;
+$gris: #393E46;
+$grisOscuro: #222831;
 
 $separacion: 5rem;
 
 // Fuentes
 
-$delgada: 300;
-$regular : 400;
-$bold: 700;
-$black: 900
+//$delgada: 300;
+//$regular : 400;
+//$bold: 700;
+//$black: 900
