--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,4 +3,6 @@
 @import 'base/variables';
 @import 'base/reset';
 /*ui*/
-@import './section.scss/header';
+@import './section/header';
+@import './section/footer';
+@import './section/navegacion';
