--- a/scss/base/_globales.scss
+++ b/scss/base/_globales.scss
@@ -1,7 +1,38 @@
 html {
     font-size: 62.5%;
     box-sizing: border-box;
+    margin: 0 ;
+   
 }
 *, *:before, *:after {
     box-sizing: inherit;
+}
+body {
+    
+    font-size: 1.6rem;
+    line-height: 2;
+.contenedor{
+    max-width: 150rem;
+  padding: 5rem 3rem;
+}  
+    
+}
+a {
+    text-decoration: none;
+}
+
+
+
+h1 {
+    font-size: 3.8rem;
+   
+}
+h2 {
+    font-size: 3.4rem;
+}
+h3 {
+    font-size: 3rem;
+}
+h4 {
+    font-size: 2.6rem;
 }
