--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,8 @@
 @import 'base/variables';
 @import 'base/reset';
 /*ui*/
-@import './section/header';
-@import './section/footer';
-@import './section/navegacion';
+@import 'section/header';
+@import 'section/footer';
+@import 'section/navegacion';
+@import 'section/sobremi';
+/*nesting*/
