--- a/scss/base/_globales.scss
+++ b/scss/base/_globales.scss
@@ -3,6 +3,7 @@ html {
     box-sizing: border-box;
     margin: 0 ;
    
+   
 }
 *, *:before, *:after {
     box-sizing: inherit;
@@ -11,14 +12,18 @@ body {
     
     font-size: 1.6rem;
     line-height: 2;
+    width: 100%;
+    height: 100%;
+ /*  
 .contenedor{
-    max-width: 150rem;
+    max-width: 190rem;
   padding: 5rem 3rem;
-}  
+} */ 
     
 }
 a {
     text-decoration: none;
+   
 }
 
 
