--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,7 +1,7 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,300;8..144,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;500;700&display=swap');
 // Fuentes
-$font: 'Roboto Serif', serif;
+
 
 // Tamaño de Media Queries
 $telefono: 480px;
@@ -9,18 +9,17 @@ $tablet: 768px;
 $desktop: 1024px;
 
 // Colores
-$negro: black;
+
 $amarillo: #FFD369;
 $verde: #71B100;
 $blanco: #EEEEEE;
 $gris: #393E46;
 $grisOscuro: #222831;
-
+$fuente:'Roboto Slab', serif;
 $separacion: 5rem;
 
 // Fuentes
 
-//$delgada: 300;
-$regular : 400;
-//$bold: 700;
-//$black: 900
+$delgada: 300;
+$regular : 500;
+$bold: 700;
