--- a/scss/section/_footer.scss
+++ b/scss/section/_footer.scss
@@ -1,11 +1,6 @@
-.footer{
-    padding: 3rem 3rem;
-    background-color: $verde;
-    .contenedor{
-        padding-top: 5rem ;
-    }
-    .copy{
-        color: $blanco;
-    text-align: center;}
+.copy{
+        font-size: 2.5rem;
+        color: white;
+        text-align: center;
 
     }
